--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -36,7 +36,7 @@ dfsub <- read.csv("../data/data_participants.csv")
 
 df <- read.csv("../data/data.csv") |> 
   right_join(
-    select(dfsub, Participant, Mobile, starts_with(c("Feedback_","BAIT")), COPS_Frequency_2, SexualActivity,
+    select(dfsub, Participant, Mobile, starts_with(c("Feedback_","BAIT")), COPS_Frequency, SexualActivity, BAIT_Worry, BAIT_Dangerous, 
            -Feedback_Text),
     by = "Participant"
     ) |> 
@@ -45,9 +45,9 @@ df <- read.csv("../data/data.csv") |>
     Condition == "Reality" ~ "Photograph"
   )) |>
   mutate(Condition = fct_relevel(Condition, "Photograph", "AI-Generated"),
-         Gender =  fct_relevel(Gender, "Male", "Female", "Other"),
-         PornFrequency = as.numeric(as.factor(COPS_Frequency_2)),
-         GenderualActivity_num = as.numeric(as.factor(SexualActivity)),
+         Gender =  fct_relevel(Gender, "Male", "Female"),
+         PornFrequency = as.numeric(as.factor(COPS_Frequency)),
+         SexurualActivity_num = as.numeric(as.factor(SexualActivity)),
          ConditionBelief = case_when(
            Condition == "Photograph" & Realness > 0 ~ "True",
            Condition == "AI-Generated" & Realness < 0 ~ "True",
@@ -75,6 +75,25 @@ scale_values <- function(x){(x-min(x))/(max(x)-min(x))}
 df$Arousal <- scale_values(df$Arousal)
 df$Enticing <- scale_values(df$Enticing)
 df$Valence <- scale_values(df$Valence)
+```
+
+**Note**: [These calculations are based on the validation of the BAIT scale](https://realitybending.github.io/FictionEro/study1/analysis/1_cleaning.html)
+
+```{r}
+
+bait <- df |> 
+  select(starts_with("BAIT_"), -Bait_Duration) |> 
+  rename_with(function(x) gsub("BAIT_\\d_", "", x)) |> 
+  filter(!is.na(BAIT_TextRealistic ))
+
+raw_scores <- data.frame(
+  Participant = df[!is.na(df$BAIT_ImagesRealistic), ]$Participant,
+  BAIT_Videos = (bait$BAIT_VideosRealistic + (1 - bait$BAIT_VideosIssues)) / 2,
+  BAIT_Visual = (bait$BAIT_ImagesRealistic + (1 - bait$BAIT_ImagesIssues) + bait$BAIT_ImitatingReality + bait$BAIT_EnvironmentReal) / 4,
+  BAIT_Text = (bait$BAIT_TextRealistic + (1 - bait$BAIT_TextIssues)) / 2
+  )
+
+df <- merge(df, raw_scores, by="Participant")
 ```
 
 ## Manipulation Check
@@ -281,7 +300,7 @@ results_table(m_v)
 ```
 
 ```{r}
-estimate_relation(m_e) |> 
+estimate_relation(m_v) |> 
   ggplot(aes(x=Gender, y=Predicted)) +
   geom_pointrange(aes(ymin=CI_low, ymax=CI_high, color = Gender), position=position_dodge(width=0.5)) +
  scale_color_manual(values=c("Male"="#E91E63", "Female"="#FF9800"), guide="none") +  labs(y="Arousal") +
@@ -396,8 +415,9 @@ results_table(m_arousal)
 
 This model explores whether various factors such as **attitudes towards AI, knowledge about AI, frequency of porn consumption, and sexual activity** moderate the relationship between gender, image relevance (specifically AI-generated versus photographs), and arousal ratings.
 
+
 ```{r}
-test_moderator <- function(df, outcome="Arousal", moderator="Bait_Visual") {
+test_moderator <- function(df, outcome="Arousal", moderator="BAIT_Visual") {
   f <- paste0(outcome, " ~ Gender / (Condition * ", moderator, ") + (Condition | Participant) + (1|Stimulus)")
   r <- glmmTMB::glmmTMB(as.formula(f),
                       data = df,
@@ -413,7 +433,7 @@ test_moderator <- function(df, outcome="Arousal", moderator="Bait_Visual") {
 
 
 moderator_results <- data.frame()
-for(m in c("BAIT_VideosRealistic", "BAIT_TextRealistic", "BAIT_ExpertAI", "PornFrequency", "SexualActivity")) {
+for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI", "PornFrequency", "SexualActivity")) {
   moderator_results <- rbind(moderator_results,
                              test_moderator(df, "Arousal", m))
 }
@@ -432,4 +452,32 @@ for(m in c("Feedback_NoFacesAttractive", "Feedback_SomeFacesAttractive", "Feedba
                             test_moderator(df, "Arousal", m))
 }
 display(feedback_results)
+```
+
+### Believed
+
+```{r}
+  m <- glmmTMB::glmmTMB(Arousal ~ Sex / Condition + (1|Participant) + (1|Item),
+                        data=filter(df, ConditionBelief == "True"), 
+                        family=glmmTMB::ordbeta(),
+                        control = glmmTMB::glmmTMBControl(parallel = 8))
+  
+  results_table(m)
+```
+
+```{r}
+
+ moderator_believed <- data.frame()
+  for(m in c("BAIT_Visual", "BAIT_Text", "AI_Knowledge",
+             "GAAIS_Positive", "GAAIS_Negative",
+             "Porn", "PornFrequency", "SexualActivity_num", 
+             "Feedback_CouldDiscriminate", "Feedback_CouldNotDiscriminate",
+             "Feedback_AIMoreArousing", "Feedback_AILessArousing", 
+             "Feedback_LabelsIncorrect", "Feedback_LabelsReversed")) {
+    moderator_believed <- rbind(moderator_believed,
+                               test_moderator(filter(df, ConditionBelief == "True"), "Arousal", m))
+  }
+  
+  display(filter(moderator_believed, p < .1))
+
 ```
